--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --color_metric_03: #e85498;
   --color_background: #ffffff;
   --color_font: #898290;
+  --color_font_contrast: #ffffff;
 }
 
 :root {
